[package]
name = "gender-decoder"
version = "0.1.0"
authors = ["Johanna Larsson <johanna.a.m.larsson@gmail.com>"]

[dependencies]
rocket = "0.1.3"
rocket_codegen = "0.1.3"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
